--- a/site/editor.css
+++ b/site/editor.css
@@ -374,6 +374,32 @@ li.ProseMirror-selectednode:after {
 
 .ProseMirror p { margin-bottom: 1em; }
 
+.ProseMirror-gapcursor {
+  display: none;
+  pointer-events: none;
+  position: absolute;
+}
+
+.ProseMirror-gapcursor:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -2px;
+  width: 20px;
+  border-top: 1px solid black;
+  animation: ProseMirror-cursor-blink 1.1s steps(2, start) infinite;
+}
+
+@keyframes ProseMirror-cursor-blink {
+  to {
+    visibility: hidden;
+  }
+}
+
+.ProseMirror-focused .ProseMirror-gapcursor {
+  display: block;
+}
+
 .ProseMirror p.indented { margin-left: 2em; }
 
 .katex { font-size: 1em; }
