--- a/site/editor.css
+++ b/site/editor.css
@@ -406,6 +406,7 @@ li.ProseMirror-selectednode:after {
 }
 
 .ProseMirror p.indented { margin-left: 2em; }
+.ProseMirror p.centered { text-align: center; }
 
 .katex { font-size: 1em; }
-m|math.temml { font-size: 1em; }
+math.temml { font-size: 1em; }
