--- a/site/docs/docstyles.css
+++ b/site/docs/docstyles.css
@@ -17,15 +17,19 @@ main { position: absolute;
            overflow:fixed; }
            
 #demo {
-   margin: 0px 2.5px 0px 2.5px;
+   position: fixed;
+   top: 30%;
+   width: 280px;
+   margin: 0px 2.5px 0px 920px;
    overflow:fixed;
 }
 
+.CodeMirror { width: 250px; }
+
 @media all {
-	#sidebar {left:  50px; width: 245px; }
-	main     {left: 330px; width:580px;  }
-   #demo    {width: 210px; }
-   .CodeMirror { width: 205px; }
+	#sidebar {left:  30px; width: 230px; }
+	main     {left: 280px; width:580px;  }
+    #demo    { display: block; }
 }
  
 @media (max-width:880px) {
@@ -98,11 +102,11 @@ div.table-grid + table th, div.table-grid + table td { border: 1px solid #aaa; v
 table.grid {margin-left: 0; }
 table.grid th, table.grid td { border: 1px solid #aaa; vertical-align: middle; }
 
-div.table-markup + table { white-space: nowrap; }
+div.table-markup + table { margin-left: 0; white-space: nowrap; }
 div.table-markup + table tr th:nth-child(2),
 div.table-markup + table tr td:nth-child(2) { border-right: 1px solid #aaa; }
 
-div.table-auto-correct + table { white-space: nowrap; margin: 0 0 0 -0.5em; }
+div.table-auto-correct + table { width: 28em; white-space: nowrap; margin: 0 0 0 -0.5em; }
 div.table-auto-correct + table tr th:nth-child(2),
 div.table-auto-correct + table tr th:nth-child(4),
 div.table-auto-correct + table tr th:nth-child(6),
@@ -113,6 +117,8 @@ div.table-auto-correct + table tr td:nth-child(6),
 div.table-auto-correct + table tr td:nth-child(8) { border-right: 1px solid #aaa; }
 
 div.table-no-wrap + table { white-space: nowrap; }
+
+div#op-table + table { width: 30em; }
 
 h6 { font-size: 100%; font-weight: bold;  margin-top: 0.8em; }
 h6 + p { margin-left: 2.5em; line-height: 1.35; }
@@ -149,6 +155,7 @@ pre > code, td code {background-color: transparent;}
     padding: 0.5em 0.5em;
     vertical-align: top;
     resize: none;
+    overflow: hidden;
 }
 
 #demo-output {
