Fix margin in TeX cell editing area.

--- a/site/editor.css
+++ b/site/editor.css
@@ -19,7 +19,8 @@
   white-space: pre-wrap;
 }
 
-.ProseMirror .hurmet-calc pre {
+.ProseMirror .hurmet-calc pre,
+.ProseMirror .hurmet-tex pre {
   margin-bottom: 0;
 }
 
