--- a/site/temml/temml.css
+++ b/site/temml/temml.css
@@ -1,12 +1,25 @@
+/*
+XITS is released under the SIL Open Font License. See the files in this
+directory for details. The font can be obtained from several TeX distributions
+or package managers.
+
+The WOFF fonts have been obtained from
+http://mirrors.ctan.org/fonts/
+*/
+
 @font-face {
-  font-family: 'KaTeX_Script';
-  src: url('KaTeX_Script-Regular.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
+  font-family: XITS Math;
+  src: local('XITS Math'), local('XITSMath-Regular'),
+       url('./xits-math.woff2');
+}
+@font-face {
+  font-family: XITS Math;
+  src: local('XITS Math Bold'), local('XITSMath-Bold'),
+       url('./xits-mathbold.woff2');
+  font-weight: bold;
 }
 
-temml {
-  font-family: "Cambria Math", "Times New Roman", serif;
+math {
   font-style: normal;
   font-weight: normal;
   line-height: normal;
@@ -18,8 +31,25 @@ temml {
   direction: ltr;
 }
 
-temml * {
+math * {
   border-color: currentColor;
+}
+
+mtext {
+  font-family: XITS;
+}
+
+math {
+  font-family: XITS Math, math;
+}
+
+*.mathcal {
+  font-feature-settings: 'ss01';
+}
+
+.oldstylenums {
+  font-family: "Cambria Math", math;
+  font-feature-settings: 'onum';
 }
 
 /* AMS environment auto-numbering via CSS counter. */
