--- a/site/temml/temml.css
+++ b/site/temml/temml.css
@@ -1,13 +1,5 @@
 /*
-The Latin Modern fonts are released under the GUST font license, which is
-legally equivalent to the LaTeX Project Public License. See the files in this
-directory for details. The fonts can be obtained from several TeX distributions
-or package managers.
-
-The Latin Modern WOFF fonts have been obtained from
-http://www.gust.org.pl/projects/e-foundry/
-
-The Temml.woff2 is a clone of KaTeX_Script-Regular, except that the code points
+Temml.woff2 is a clone of KaTeX_Script-Regular, except that the code points
 have been changed from ASCII to Unicode Mathematical Alphanumeric Symbols Script capitals,
 Unicode range 1D49C to 1D4B5.
 */
@@ -19,30 +11,8 @@ Unicode range 1D49C to 1D4B5.
   font-style: normal;
 }
 
-/* Latin Modern Roman has various sizes. We use the generic name
-   "Latin Modern Roman" for the local versions and "LMRoman12" for the Web font.
-*/
-@font-face {
-  font-family: LMRoman12;
-  src: url('./lmroman12-regular.woff2');
-}
-@font-face {
-  font-family: LMRoman12;
-  src: url('./lmroman12-bold.woff2');
-  font-weight: bold;
-}
-@font-face {
-  font-family: LMRoman12;
-  src: url('./lmroman12-italic.woff2');
-  font-style: italic;
-}
-@font-face {
-  font-family: Latin Modern Math;
-  src: local('Latin Modern Math'), local('LatinModernMath-Regular'),
-       url('./latinmodern-math.woff2');
-}
-
 math {
+  font-family: "Cambria Math", "Times New Roman", math;
   font-style: normal;
   font-weight: normal;
   line-height: normal;
@@ -58,24 +28,11 @@ math * {
   border-color: currentColor;
 }
 
-.latin-modern math {
-  font-family: "Latin Modern Math", "Times New Roman", math;
-}
-
-mtext {
-  font-family: Latin Modern Roman, LMRoman12;
-}
-
-math {
-  font-family: Latin Modern Math;
-}
-
-*.mathscr {
+math .mathscr {
   font-family: "Temml";
 }
 
-.oldstylenums {
-  font-family: "Cambria Math", math;
+math .oldstylenums {
   font-feature-settings: 'onum';
 }
 
