--- a/site/editor.css
+++ b/site/editor.css
@@ -1,5 +1,3 @@
-@namespace m url('http://www.w3.org/1998/Math/MathML');
-
 .ProseMirror {
   position: relative;
   content-visibility: auto;
@@ -334,12 +332,16 @@ li.ProseMirror-selectednode:after {
 
 .math-code {
   display: inline-block;
+  font-family: Consolas, 'Courier New', 'Cambria Math', monospace;
+  font-size: 14px;
   max-width: 760px;
-}
-.math-code pre {margin-left: 0}
-.math-code .CodeMirror {
-  width: 100%;
   min-width: 50px;
+  min-height: 20px;
+  color: black;
+  direction: ltr;
+}
+.math-code form {
+  padding: 4px;
 }
 .math-display {
   cursor: auto;
@@ -347,6 +349,7 @@ li.ProseMirror-selectednode:after {
   background: darkslategray;
   color: white;
   padding: 3px;
+  margin-top: 3px;
   border-radius: 2px;
   min-width: 10px;
 }
