--- a/site/styles.css
+++ b/site/styles.css
@@ -11,7 +11,7 @@ body {
   line-height: 1.45;
   background: white;
   font-family: Calibri, 'Helvetica Neue', Arial, Cambria, sans-serif;
-  font-size: 16px;
+  font-size: 12pt;
   position: relative;
 }
 
