--- a/site/editor.css
+++ b/site/editor.css
@@ -433,5 +433,5 @@ li.ProseMirror-selectednode:after {
 .ProseMirror div.centered { text-align: center; }
 
 .katex { font-size: 12pt; }
-math   { font-size: 1em; }
+math   { font-size: 12pt; }
 math .special-fraction { font-family: "Times New Roman"; }
