--- a/site/styles.css
+++ b/site/styles.css
@@ -104,6 +104,10 @@ article {
   padding: 10px 3px 100px;
 }
 
+#print-table {
+  font-size: 12pt;
+}
+
 #copyright {
   max-width: 780px;
   margin: 0 auto;
@@ -118,9 +122,10 @@ article {
 
 /* A header for printed documents */
 @media screen {
-  thead, tfoot { display: none; }
+  #print-table { display: none; }
 }
-table.editor-wrap { border-collapse: collapse; width: 100%; }
+table #print-table { border-collapse: collapse; width: 780px; }
+#header table p { line-height: 1.6; margin: 2px 0 2px 0; }
 th {
   font-weight: normal;
   text-align:left;
@@ -162,20 +167,3 @@ th p { line-height: 1.6; }
   display: inline-block;
   position: relative;
 }
-
-/* Code highlighting styles */
-.hl-keyword, .fn {color: #708;}
-.hl-atom {color: #219;}
-.hl-number {color: #164;}
-.hl-def {color: #00f;}
-.hl-variable-2, .type {color: #05a;}
-.hl-comment {color: #a50;}
-.hl-string, .string {color: #a11;}
-.hl-string-2 {color: #f50;}
-.hl-meta {color: #555;}
-.hl-tag {color: #170;}
-.hl-attribute {color: #00c;}
-
-.param, .prop {font-style: italic;}
-.prim {color: #075;}
-.defaultvalue {color: #777;}
