--- a/site/styles.css
+++ b/site/styles.css
@@ -15,6 +15,7 @@ body {
   position: relative;
   counter-reset: pageNum;
 }
+.long-primer { font-size: 10pt; }
 
 nav {
   max-width: 780px;
@@ -119,9 +120,10 @@ article {
 
 /* A header for printed documents */
 @media screen {
-/*  #print-div { display: none; } */
+  #print-div { display: none; }
 }
-div .print-div { width: 780px; font-size: 12pt; }
+div #print-div { width: 780px; font-size: 12pt; }
+div #print-div .long-primer { font-size: 10 pt; }
 .header { break-before: page; counter-increment: pageNum; }
 .page-display::after { content: counter(pageNum) }
 th {
