--- a/src/styles.css
+++ b/src/styles.css
@@ -649,10 +649,8 @@ ul.toc span + span {
 .ProseMirror div.indented { margin-left: 2em; }
 .ProseMirror div.centered { text-align: center; }
 
-.katex { font-size: 12pt; }
-math   { font-size: 12pt; }
-.long-primer .katex { font-size: 10pt; }
-.long-primer math   { font-size: 12pt; }
+.katex { font-size: 1em; }
+math   { font-size: 1em; }
 math .special-fraction { font-family: "Times New Roman"; }
 
 /*
