Install service workers

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 * { margin:0; padding:0; }  /* reset */
 
 html {
-  background: black;
+  background: white;
   overflow-y: scroll;
   overflow-x: hidden;
 }
