Set background-color of draft mode to transparent.

--- a/src/styles.css
+++ b/src/styles.css
@@ -210,6 +210,10 @@ th p { line-height: 1.6; }
   margin-bottom: 0;
 }
 
+.ProseMirror .hurmet-calc code {
+  background-color: transparent;
+}
+
 .ProseMirror li {
   position: relative;
 }
