--- a/preview/docStyles.css
+++ b/preview/docStyles.css
@@ -149,7 +149,36 @@ p.indented {
     margin-top: 0.5em;
     text-align: left;
 }
-table {
+.hurmet-comment {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    float: right;
+    width: 205px;
+  }
+  .left-triangle {
+    display: inline-block;
+    box-sizing:content-box;
+    width: 0; 
+    height: 0; 
+    border-left: 6px solid white;
+    border-top: 6px solid white;
+    border-bottom: 6px solid white; 
+    border-right:6px solid #e2941f;
+    margin-top:5px;
+  }
+  .comment-payload {
+    display: inline-block;
+    cursor: pointer;
+    background: white;
+    border: 2px solid #e2941f;
+    border-radius: 8px;
+    width: 181px;
+    font-size: 90%;
+    padding: 4px;
+    min-height: 20px;
+  }
+  table {
     font-size: inherit;
     margin-left: 1.5em;
     border-collapse: collapse;
