--- a/preview/styles.css
+++ b/preview/styles.css
@@ -657,7 +657,15 @@ ul.toc span + span {
  */
 
 /*
-Temml.woff2 is a clone of KaTeX_Script-Regular, except that the code points
+The Latin Modern fonts are released under the GUST font license, which is
+legally equivalent to the LaTeX Project Public License. See the files in this
+directory for details. The fonts can be obtained from several TeX distributions
+or package managers.
+
+The Latin Modern WOFF font has been obtained from
+http://www.gust.org.pl/projects/e-foundry/
+
+The Temml.woff2 is a clone of KaTeX_Script-Regular, except that the code points
 have been changed from ASCII to Unicode Mathematical Alphanumeric Symbols Script capitals,
 Unicode range 1D49C to 1D4B5.
 */
@@ -675,7 +683,6 @@ Unicode range 1D49C to 1D4B5.
 }
 
 math {
-  font-family: "Cambria Math", 'STIXTwoMath-Regular', "Times New Roman", math;
   font-style: normal;
   font-weight: normal;
   line-height: normal;
@@ -687,15 +694,15 @@ math {
   direction: ltr;
 }
 
-.hurmet-tex math {
-  font-family: Latin Modern Math, math;
-}
-
 math * {
   border-color: currentColor;
 }
 
-math .mathscr {
+math {
+  font-family: "Latin Modern Math", "Times New Roman", math;
+}
+
+*.mathscr {
   font-family: "Temml";
 }
 
@@ -764,7 +771,8 @@ mtable.tml-aligned > mtr > mtd:nth-child(even) {
 
 mtable.tml-align > mtr > mtd:nth-child(even),
 mtable.tml-alignat > mtr > mtd:nth-child(even),
-mtable.tml-aligned > mtr > mtd:nth-child(odd) {
+mtable.tml-aligned > mtr > mtd:nth-child(odd),
+mtable.tml-align-star > mtr > mtd:nth-child(odd) {
   text-align: -webkit-right;
   text-align: -moz-right;
 }
@@ -875,7 +883,7 @@ menclose.xcancel {
           rgba(0,0,0,0) 100%);
 }
 
-/* This section set math sizes */
+/* This section sets math sizes */
 math   { font-size: 1em; }
 math .special-fraction { font-family: "Times New Roman"; }
 
