--- a/preview/docStyles.css
+++ b/preview/docStyles.css
@@ -124,6 +124,16 @@ sup {
 sub {
     bottom: -0.25em;
 }
+figure,
+figure img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+figure figcaption {
+  text-align: center;
+  margin-top: 2px;
+}
 .reduced {
     font-size: 80%;
 }
