--- a/preview/styles.css
+++ b/preview/styles.css
@@ -627,6 +627,24 @@ ul.toc span + span {
   margin-top: 10px;
 }
 
+.ProseMirror aside.comment {
+  float: right;
+  border: 2px solid #e2941f;
+  border-radius: 8px;
+  width: 181px;
+  font-size: 90%;
+  text-indent: -4px;
+  padding: 4px;
+  min-height: 20px;
+  margin: 0 0 0 8px;
+}
+.ProseMirror aside.comment::before {
+  content: "◀";
+  display: inline-block;
+  color: #e2941f;
+  transform: translateX(-0.6em);
+}
+
 .ProseMirror {
   padding: 4px 8px 4px 14px;
   line-height: 1.2;
@@ -1012,36 +1030,6 @@ math .special-fraction { font-family: "Times New Roman"; }
 .c7c td:nth-child(7), .c7c th:nth-child(7),
 .c8c td:nth-child(8), .c8c th:nth-child(8),
 .c9c td:nth-child(9), .c9c th:nth-child(9) { text-align:center }
-
-.hurmet-comment {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  float: right;
-  width: 205px;
-}
-.left-triangle {
-  display: inline-block;
-  box-sizing:content-box;
-  width: 0; 
-  height: 0; 
-  border-left: 6px solid white;
-  border-top: 6px solid white;
-  border-bottom: 6px solid white; 
-  border-right:6px solid #e2941f;
-  margin-top:5px;
-}
-.comment-payload {
-  display: inline-block;
-  cursor: pointer;
-  background: white;
-  border: 2px solid #e2941f;
-  border-radius: 8px;
-  width: 181px;
-  font-size: 90%;
-  padding: 4px;
-  min-height: 20px;
-}
 
 /*
  * This section deals with CSS for the printed page.
