--- a/preview/styles.css
+++ b/preview/styles.css
@@ -197,15 +197,23 @@ th p { line-height: 1.6; }
   white-space: pre-wrap;
 }
 
+.ProseMirror pre > code {
+  padding: 0;
+}
+
+.ProseMirror span > pre {
+  padding: 0;
+  margin: 0 0 0 2em;
+}
+
+.ProseMirror span > pre > code {
+  margin: 0;
+}
+
 .ProseMirror .hurmet-calc,
 .ProseMirror .hurmet-tex {
   white-space: normal;
   padding: 4px;
-}
-
-.ProseMirror .hurmet-calc pre,
-.ProseMirror .hurmet-tex pre {
-  margin-bottom: 0;
 }
 
 .ProseMirror .hurmet-calc code {
