Support CLI Hurmet w/calculations

--- a/preview/styles.css
+++ b/preview/styles.css
@@ -188,7 +188,7 @@ th:first-child .page-display { float: left; }
 
 .ProseMirror {
   word-wrap: break-word;
-  white-space: pre-wrap;
+  white-space: normal;
   -webkit-font-variant-ligatures: none;
   font-variant-ligatures: none;
 }
