--- a/preview/styles.css
+++ b/preview/styles.css
@@ -220,6 +220,7 @@ th:first-child .page-display { float: left; }
 }
 
 .ProseMirror .hurmet-calc code {
+  white-space: pre-wrap;
   background-color: transparent;
 }
 
@@ -928,9 +929,12 @@ menclose.xcancel {
           rgba(0,0,0,0) 100%);
 }
 
-/* This section sets math sizes */
+/* This section modifies Temml math CSS */
 math   { font-size: 1em; }
 math .special-fraction { font-family: "Times New Roman"; }
+/* Create a hanging indent on calculations that wrap to a second line. */
+.hurmet-calc > math > mrow:not(:first-child) { margin-left: 2.5em }
+.hurmet-calc > math > mrow:not(:last-child) { margin-right: -2.5em }
 
 /*
  * This section contains CSS for tables.
