--- a/preview/docStyles.css
+++ b/preview/docStyles.css
@@ -428,9 +428,16 @@ summary {
 /*
  * This section contains the CSS for Temml math rendering.
  */
+/*
+The Latin Modern fonts are released under the GUST font license, which is
+legally equivalent to the LaTeX Project Public License. See the files in this
+directory for details. The fonts can be obtained from several TeX distributions
+or package managers.
 
- /*
-Temml.woff2 is a clone of KaTeX_Script-Regular, except that the code points
+The Latin Modern WOFF font has been obtained from
+http://www.gust.org.pl/projects/e-foundry/
+
+The Temml.woff2 is a clone of KaTeX_Script-Regular, except that the code points
 have been changed from ASCII to Unicode Mathematical Alphanumeric Symbols Script capitals,
 Unicode range 1D49C to 1D4B5.
 */
@@ -442,8 +449,12 @@ Unicode range 1D49C to 1D4B5.
     font-style: normal;
   }
   
+  @font-face {
+    font-family: Latin Modern Math;
+    src: url('latinmodernmath.woff2');
+  }
+  
   math {
-    font-family: "Cambria Math", 'STIXTwoMath-Regular', "Times New Roman", math;
     font-style: normal;
     font-weight: normal;
     line-height: normal;
@@ -459,7 +470,11 @@ Unicode range 1D49C to 1D4B5.
     border-color: currentColor;
   }
   
-  math .mathscr {
+  math {
+    font-family: "Latin Modern Math", "Times New Roman", math;
+  }
+  
+  *.mathscr {
     font-family: "Temml";
   }
   
@@ -528,7 +543,8 @@ Unicode range 1D49C to 1D4B5.
   
   mtable.tml-align > mtr > mtd:nth-child(even),
   mtable.tml-alignat > mtr > mtd:nth-child(even),
-  mtable.tml-aligned > mtr > mtd:nth-child(odd) {
+  mtable.tml-aligned > mtr > mtd:nth-child(odd),
+  mtable.tml-align-star > mtr > mtd:nth-child(odd) {
     text-align: -webkit-right;
     text-align: -moz-right;
   }
