--- a/preview/styles.css
+++ b/preview/styles.css
@@ -698,7 +698,15 @@ ul.toc span + span {
  */
 
 /*
-Temml.woff2 is a clone of KaTeX_Script-Regular, except that the code points
+The Latin Modern fonts are released under the GUST font license, which is
+legally equivalent to the LaTeX Project Public License. See the files in this
+directory for details. The fonts can be obtained from several TeX distributions
+or package managers.
+
+The Latin Modern WOFF font has been obtained from
+http://www.gust.org.pl/projects/e-foundry/
+
+The Temml.woff2 is a clone of KaTeX_Script-Regular, except that the code points
 have been changed from ASCII to Unicode Mathematical Alphanumeric Symbols Script capitals,
 Unicode range 1D49C to 1D4B5.
 */
@@ -710,8 +718,12 @@ Unicode range 1D49C to 1D4B5.
   font-style: normal;
 }
 
+@font-face {
+  font-family: Latin Modern Math;
+  src: url('latinmodernmath.woff2');
+}
+
 math {
-  font-family: "Cambria Math", 'STIXTwoMath-Regular', math;
   font-style: normal;
   font-weight: normal;
   line-height: normal;
@@ -727,7 +739,11 @@ math * {
   border-color: currentColor;
 }
 
-math .mathscr {
+math {
+  font-family: "Latin Modern Math", "Times New Roman", math;
+}
+
+*.mathscr {
   font-family: "Temml";
 }
 
@@ -796,7 +812,8 @@ mtable.tml-aligned > mtr > mtd:nth-child(even) {
 
 mtable.tml-align > mtr > mtd:nth-child(even),
 mtable.tml-alignat > mtr > mtd:nth-child(even),
-mtable.tml-aligned > mtr > mtd:nth-child(odd) {
+mtable.tml-aligned > mtr > mtd:nth-child(odd),
+mtable.tml-align-star > mtr > mtd:nth-child(odd) {
   text-align: -webkit-right;
   text-align: -moz-right;
 }
