--- a/preview/styles.css
+++ b/preview/styles.css
@@ -720,7 +720,7 @@ Unicode range 1D49C to 1D4B5.
 
 @font-face {
   font-family: Latin Modern Math;
-  src: url('latinmodernmath.woff2');
+  src: url('./latinmodernmath.woff2');
 }
 
 math {
@@ -743,6 +743,10 @@ math {
   font-family: "Latin Modern Math", "Times New Roman", math;
 }
 
+/* Next line is active in Firefox and Safari.
+ * Not in Chromium, which recognizes display: "block math" written inline. */
+math.tml-display { display: block; }
+
 *.mathscr {
   font-family: "Temml";
 }
@@ -762,7 +766,7 @@ math > mrow {
 }
 
 /* Avoid flex-wrap in Firefox */
-@supports (-moz-appearance:meterbar) and (display:flex) {
+@-moz-document url-prefix() {
   math { display: inline; }
   math > mrow { padding: 0 }
 }
@@ -888,7 +892,7 @@ mtr.tml-hline-dashed > mtd {
 
 /* MathML-Core does not support <menclose> attributes.
  * So Use background images for \cancel */
-menclose.cancel {
+mrow.cancel {
   background: 
       linear-gradient(to top left,
           rgba(0,0,0,0) 0%,
@@ -898,7 +902,7 @@ menclose.cancel {
           rgba(0,0,0,0) 100%);
 }
 
-menclose.bcancel {
+mrow.bcancel {
   background: 
       linear-gradient(to top right,
           rgba(0,0,0,0) 0%,
@@ -908,7 +912,7 @@ menclose.bcancel {
           rgba(0,0,0,0) 100%);
 }
 
-menclose.xcancel {
+mrow.xcancel {
   background: 
       linear-gradient(to top left,
           rgba(0,0,0,0) 0%,
